Update 'd9sfv63uc-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:a43585127cf537e0a8e81294ab8554e249c7a6e8@sha256:0ce01da8f6db5da3b676ad851bde740d260cf142c5afb52b135d499da131ba2f

--- a/components/d9sfv63uc-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/d9sfv63uc-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: d9sfv63uc-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:a43585127cf537e0a8e81294ab8554e249c7a6e8@sha256:0ce01da8f6db5da3b676ad851bde740d260cf142c5afb52b135d499da131ba2f
+          name: container-image
